# mcpvotsagi

./: .env.example  .gitattributes  .gitignore  .gitmodules  AI_TOOLS_RESEARCH_COORDINATION.json  AI_TOOLS_RESEARCH_COORDINATION_PLAN.md  CHANGELOG.md  CHECK_AND_START.py  CHECK_PORT.ps1  CLAUDE_CODE_QUICK_TASKS.md  CLAUDE_OPUS_4_ANALYSIS_READY.md  CLAUDIA_DEEPSEEK_ANALYSIS_REPORT.md  CLAUDIA_DEEPSEEK_INTEGRATION_SUMMARY.json  CLAUDIA_INTEGRATION_COMPLETION_REPORT_20250705_213532.json  CLAUDIA_INTEGRATION_COMPLETION_REPORT_20250705_213555.json  CLAUDIA_MODEL_UPGRADE_REPORT_20250706_182233.json  CLAUDIA_OPTIMAL_CONFIG_REPORT_20250706_193645.json  CLAUDIA_SCRIPT_UPDATE_REPORT_20250706_203641.json  CLAUDIA_UPGRADE_REPORT_20250706_185429.json  CLOUD_COMPUTE.bat  COMPLETE_SYSTEM_OVERVIEW.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CONFIGURE_SYSTEM.py  CONTRIBUTING.md  CONVERSATION_SUMMARY_FINAL.md  DEEPSEEK_INTEGRATION.md  DEVELOPMENT.md  DGM_IMPROVEMENTS_SUMMARY.md  DGM_INTEGRATION_FINAL_SUCCESS_REPORT.md  DGM_INTEGRATION_SUCCESS_REPORT.md  ENHANCED_README.md  FINAL_SUCCESS_REPORT.md  FINAL_VERIFICATION_REPORT.py  GITHUB_UPDATE_SUMMARY.md  IMPLEMENTATION_COMPLETE.py  INSTALL_EVERYTHING.py  JUPITER_DEX_ANALYSIS_20250706_180357.json  JUPITER_DEX_INTEGRATION_REPORT_20250706_180357.md  JUPITER_DEX_INTEGRATION_REPORT_20250706_180423.md  JUPITER_INTEGRATION_COMPLETE_20250706_182947.json  (+163 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: pull_request_template.md
archive/: README.md
config/: CLAUDIA_OPTIMAL_CONFIG_REPORT_20250706_193547.json  MCPVOTSAGI_SYSTEM_STATUS_REPORT_20250706.md  README.md  advanced_dgm_config.yaml  claudia_ecosystem_config.yaml  claudia_model_upgrade_config.py  claudia_optimal_config.yaml  consolidated_services_config.json  cyberpunk_launcher.py  dgm_config.json  ecosystem_config.yaml  launcher.py  mcp_settings.json  package.json  production_launcher.py  redis_working_config.json  requirements.txt  requirements_complete.txt  setup.py  unified_agi_portal.yaml  unified_system_config.yaml
core/: a2a_enhanced_protocol.py  consolidated_mcp_servers.py  enhanced_mcp_memory_server.py  master_orchestrator.py  unified_dgm_server_v2.py
docs/: ARCHITECTURE_MERMAID.md  CLAUDE_CODE_CAPABILITIES_REPORT.md  CLAUDE_CODE_WSL_INTEGRATION_TASKS.md  CLAUDIA_ADVANCED_UPGRADE_REPORT_20250706_181635.json  CLAUDIA_INTEGRATION.md  CLAUDIA_INTEGRATION_SUMMARY_20250705_213555.md  CLAUDIA_UPGRADE_REPORT_20250706_185453.json  CLAUDIA_UPGRADE_REPORT_20250706_190411.json  CODESPACES_INTEGRATION.md  CODESPACES_LEVERAGE_GUIDE.md  COMPLETE_AI_TOOL_STACK_FINAL.md  CONTEXT7_COMPLETE_DOCUMENTATION.md  CONTEXT7_INTEGRATION_GUIDE.md  CONTRIBUTING.md  CONVERSATION_SUMMARY_COMPRESSED.md  CRYPTO_NATIVE_AI_AGENT_ECONOMY.md  DEEPSEEK_F_DRIVE_SUMMARY.md  DEEPSEEK_MODEL_UPDATE_COMPLETE.md  DEEPSEEK_R1_AGENT_INTEGRATION_COMPLETE.md  DEPLOYMENT_SUCCESS_CELEBRATION.md  DEPLOYMENT_SUCCESS_JULY_3_2025.md  DEVELOPMENT.md  DGM_INTEGRATION_ANALYSIS_REPORT.json  DGM_INTEGRATION_GUIDE.md  DGM_Integration_Report_SUCCESS_20250707_212032.json  DISTRIBUTED_IPFS_ROADMAP.md  ENHANCEMENT_REPORT.py  FEATURES_AND_CAPABILITIES.md  FORKED_REPOS_INTEGRATION_REPORT.md  FORK_INTEGRATION_COMPLETE.md  FULL_INTEGRATION_SETUP.bat  FUTURE_WATCH_INTEGRATION.md  F_DRIVE_DATA_INTELLIGENCE.py  F_DRIVE_INTEGRATION_COMPLETE.md  F_DRIVE_STORAGE_BUGFIXES_COMPLETE.md  IMMEDIATE_EXECUTION_PLAN.md  (+78 more)
(+336 files in other folders)
