[project]
name = "mcpvotsagi"
version = "2.0.0"
description = "MCP integration suite with voting mechanisms, agent orchestration, and DGM support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "MCPVOT" }]
keywords = ["mcp", "ai", "agents", "trading", "solana", "voting"]

dependencies = [
    "redis[hiredis]>=5.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "psutil>=5.9",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
trading = [
    "solana>=0.35",
    "solders>=0.21",
]
monitoring = [
    "prometheus-client>=0.20",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["core", "servers", "services", "src", "tools", "utils"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
